--- a/frida_project.ipynb
+++ b/frida_project.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -206,8 +206,7 @@
     }
    ],
    "source": [
-    "master_list = list(zip(audio_tour_number, paintings))\n",
-    "print(master_list)"
+    "master_list = list(zip(audio_tour_number, paintings))\n"
    ]
   },
   {
@@ -225,7 +224,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "print(master_list)"
+   ]
   }
  ],
  "metadata": {
